import { graphql } from "graphql";
import { internalSchema } from "../schemaLoader";
import { createMockedDataLoaders } from "../datasourceLoader";

export async function performTestQuery({ query, variables, context }) {
  return graphql(internalSchema, query, null, context, variables);
}

const query = `
mutation($input: DigitalCopyOrderArticle!) {
  submitDigitalCopyArticleOrder(input: $input) {
    status
  }
}    
`;
test("DigitalCopy, unauthorized user should give error", async () => {
  const result = await performTestQuery({
    query,
    variables: {
      input: { pid: "870971-avis:34591016", pickUpBranch: "715100" },
    },
    context: {
      datasources: createMockedDataLoaders(),
      accessToken: "DUMMY_TOKEN",
      smaug: {},
    },
  });

  expect(result).toMatchSnapshot();
});

test("DigitalCopy, unknown pickupBranch should give error", async () => {
  const result = await performTestQuery({
    query,
    variables: {
      input: {
        pid: "870971-avis:34591016",
        pickUpBranch: "some-unknown-agency",
      },
    },
    context: {
      datasources: createMockedDataLoaders(),
      accessToken: "DUMMY_TOKEN",
      smaug: { user: { id: "1234561234" } },
    },
  });

  expect(result).toMatchSnapshot();
});

test("DigitalCopy, agency not subscribed should give error", async () => {
  const result = await performTestQuery({
    query,
    variables: {
      input: {
        pid: "870971-avis:34591016",
        pickUpBranch: "100200",
      },
    },
    context: {
      datasources: createMockedDataLoaders(),
      accessToken: "DUMMY_TOKEN",
      smaug: { user: { id: "1234561234", agency: "100200" } },
    },
  });

  expect(result).toMatchSnapshot();
});

test("DigitalCopy, manifestation not part of statsbibliotek journal should give error", async () => {
  const result = await performTestQuery({
    query,
    variables: {
      input: {
        pid: "870971-anmeld:37860409",
        pickUpBranch: "715100",
      },
    },
    context: {
      datasources: createMockedDataLoaders(),
      accessToken: "DUMMY_TOKEN",
      smaug: { user: { id: "1234561234", agency: "715100" } },
    },
  });

  expect(result).toMatchSnapshot();
});

test("DigitalCopy, order success", async () => {
  const result = await performTestQuery({
    query,
    variables: {
      input: {
        pid: "870971-avis:34591016",
        pickUpBranch: "715100",
      },
    },
    context: {
      datasources: createMockedDataLoaders(),
      accessToken: "DUMMY_TOKEN",
      smaug: { user: { id: "1234561234", agency: "715100" } },
    },
  });

  expect(result).toMatchSnapshot();
});
